--- a/public/en/index.html
+++ b/public/en/index.html
@@ -300,9 +300,8 @@
   </div>
 </div>
 <div class="content">
-  <h2 id="what-do-you-do-for-a-living">What do you do for a living?</h2>
-<p>Hi, my name is Timothée, I am a web developper, working at Société Générale on the mobile app and desktop Bank Card features.
-In 2018-2019, I was a working student in Research and Development at Axway as developer and student at the IIM (Institut de l&rsquo;Internet et du Multimédia).</p>
+  <h2 id="presentation">Presentation</h2>
+<p>Hi, my name is Timothée, I am a web developper out of the IIM. During my sparetime, I work a programmer at the webradio <a href="https://www.radio-sofa.com">Radio Sofa</a>.</p>
 <p>Also freelance web developer and work with various customers: self-employed, start-ups, companies, building and maintaining websites or mobile applications.</p>
 <p>You will find on this site the progress of my side-projects, my reflexions and other culinary achievements!</p>
 
