--- a/public/index.html
+++ b/public/index.html
@@ -263,7 +263,7 @@
 
     
       <div class="py-8 text-lg leading-normal">
-        a.k.a. Broski, co-fondateur de <a href="https://euphorik.fr">Euphorik Paris</a> et programmateur chez <a href="https://radio-sofa.com">Radio Sofa</a>
+        a.k.a. Broski, programmateur chez <a href="https://radio-sofa.com">Radio Sofa</a> et co-fondateur de <a href="https://euphorik.fr">Euphorik Paris</a>
       </div>
     
   </div>
@@ -301,7 +301,7 @@
 </div>
 <div class="content">
   <h2 id="présentation">Présentation</h2>
-<p>Je suis développeur web fullstack, diplômé de <a href="https://iim.fr">l&rsquo;IIM</a> en 2019. Autrement je m&rsquo;occupe de la programmation de ma propre émission chez la webradio <a href="https://www.radio-sofa.com">Radio Sofa</a>.</p>
+<p>Je suis développeur web fullstack, diplômé de <a href="https://iim.fr">l&rsquo;IIM</a> en 2019. Pendant mon temps libre, je m&rsquo;occupe de la programmation de ma propre émission chez la webradio <a href="https://www.radio-sofa.com">Radio Sofa</a>.</p>
 <!-- 
  à la <a href="https://particuliers.societegenerale.fr">Société Générale</a>. En 2018-19, j'étais en alternance en R&D chez <a href="https://axway.com">Axway</a> et à l'<a href="https://iim.fr">IIM</a> - Institut de l'Internet et du Multimédia au Pôle Léonard de Vinci à La Défense. -->
 <h3 id="contenu-du-site">Contenu du site</h3>
