--- a/public/en/404.html
+++ b/public/en/404.html
@@ -81,7 +81,7 @@
 
 
 <meta name="description"
-  content="Eureka is a elegant and powerful theme for Hugo.">
+  content="Vous trouverez sur ce site l&#39;avancement des side projects et reflexions de Timothée DORAND.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -111,7 +111,7 @@
 
 
 
-<meta property="og:description" content="Eureka is a elegant and powerful theme for Hugo." />
+<meta property="og:description" content="Vous trouverez sur ce site l&#39;avancement des side projects et reflexions de Timothée DORAND." />
 
 
 
