--- a/public/fr/404.html
+++ b/public/fr/404.html
@@ -18,7 +18,7 @@
 <link rel="mask-icon" href="/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="/404.html">
+<link rel="alternate" hreflang="en" href="/en/404.html">
 <link rel="alternate" hreflang="fr" href="/fr/404.html">
 <noscript>
     <style>
@@ -107,7 +107,7 @@
                 </button>
                 <ul class="lang-switch"><li>|</li>
                     <li>
-                        <a href="/" title="English"
+                        <a href="/en/" title="English"
                             aria-label="English">En</a>
                     </li>
                 </ul>
