--- a/public/fr/index.html
+++ b/public/fr/index.html
@@ -21,7 +21,7 @@
 <meta name="msapplication-TileColor" content="#2e2e33">
 <link rel="alternate" type="application/rss+xml" href="/fr/index.xml">
 <link rel="alternate" type="application/json" href="/fr/index.json">
-<link rel="alternate" hreflang="en" href="/">
+<link rel="alternate" hreflang="en" href="/en/">
 <link rel="alternate" hreflang="fr" href="/fr/">
 <noscript>
     <style>
@@ -123,7 +123,7 @@
                 </button>
                 <ul class="lang-switch"><li>|</li>
                     <li>
-                        <a href="/" title="English"
+                        <a href="/en/" title="English"
                             aria-label="English">En</a>
                     </li>
                 </ul>
