--- a/public/fr/series/index.html
+++ b/public/fr/series/index.html
@@ -19,7 +19,7 @@
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <link rel="alternate" type="application/rss+xml" href="/fr/series/index.xml">
-<link rel="alternate" hreflang="en" href="/series/">
+<link rel="alternate" hreflang="en" href="/en/series/">
 <link rel="alternate" hreflang="fr" href="/fr/series/">
 <noscript>
     <style>
@@ -108,7 +108,7 @@
                 </button>
                 <ul class="lang-switch"><li>|</li>
                     <li>
-                        <a href="/" title="English"
+                        <a href="/en/" title="English"
                             aria-label="English">En</a>
                     </li>
                 </ul>
