--- a/public/fr/404.html
+++ b/public/fr/404.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="fr" dir="auto">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
+<head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="noindex, nofollow">
+<meta name="robots" content="index, follow">
 <title>404 Page not found | Timothée Dorand</title>
 <meta name="keywords" content="">
 <meta name="description" content="Vous trouverez sur ce site l&#39;avancement des side projects et reflexions de Timothée DORAND.">
 <meta name="author" content="">
-<link rel="canonical" href="//localhost:1313/fr/404.html">
+<link rel="canonical" href="/fr/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.45e028aa8ce0961349adf411b013ee39406be2c0bc80d4ea3fc04555f7f4611a.css" integrity="sha256-ReAoqozglhNJrfQRsBPuOUBr4sC8gNTqP8BFVff0YRo=" rel="preload stylesheet" as="style">
-<link rel="icon" href="//localhost:1313/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="//localhost:1313/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="//localhost:1313/favicon-32x32.png">
-<link rel="apple-touch-icon" href="//localhost:1313/apple-touch-icon.png">
-<link rel="mask-icon" href="//localhost:1313/safari-pinned-tab.svg">
+<link rel="icon" href="/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+<link rel="mask-icon" href="/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="//localhost:1313/en/404.html">
-<link rel="alternate" hreflang="fr" href="//localhost:1313/fr/404.html">
+<link rel="alternate" hreflang="en" href="/en/404.html">
+<link rel="alternate" hreflang="fr" href="/fr/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -56,7 +56,16 @@
         }
 
     </style>
-</noscript>
+</noscript><meta property="og:url" content="/fr/404.html">
+  <meta property="og:site_name" content="Timothée Dorand">
+  <meta property="og:title" content="404 Page not found">
+  <meta property="og:description" content="Vous trouverez sur ce site l&#39;avancement des side projects et reflexions de Timothée DORAND.">
+  <meta property="og:locale" content="fr">
+  <meta property="og:type" content="website">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="404 Page not found">
+<meta name="twitter:description" content="Vous trouverez sur ce site l&#39;avancement des side projects et reflexions de Timothée DORAND.">
+
 </head>
 
 <body class="list" id="top">
@@ -74,7 +83,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="//localhost:1313/fr/" accesskey="h" title="Timothée Dorand (Alt + H)">Timothée Dorand</a>
+            <a href="/fr/" accesskey="h" title="Timothée Dorand (Alt + H)">Timothée Dorand</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -98,7 +107,7 @@
                 </button>
                 <ul class="lang-switch"><li>|</li>
                     <li>
-                        <a href="//localhost:1313/en/" title="English"
+                        <a href="/en/" title="English"
                             aria-label="English">En</a>
                     </li>
                 </ul>
@@ -106,22 +115,22 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="//localhost:1313/fr/categories/music/" title="Musique">
+                <a href="fr/categories/music/" title="Musique">
                     <span>Musique</span>
                 </a>
             </li>
             <li>
-                <a href="//localhost:1313/fr/categories/technology/" title="Tech">
+                <a href="fr/categories/technology/" title="Tech">
                     <span>Tech</span>
                 </a>
             </li>
             <li>
-                <a href="//localhost:1313/fr/categories/cooking/" title="Cuisine">
+                <a href="fr/categories/cooking/" title="Cuisine">
                     <span>Cuisine</span>
                 </a>
             </li>
             <li>
-                <a href="//localhost:1313/fr/posts/about" title="A propos">
+                <a href="fr/posts/about" title="A propos">
                     <span>A propos</span>
                 </a>
             </li>
