--- a/public/en/index.html
+++ b/public/en/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>Timothée Dorand - From Paris to Berlin</title>
+<title>Timothée Dorand</title>
 
 <meta name="description" content="Vous trouverez sur ce site l&#39;avancement des side projects et reflexions de Timothée DORAND.">
 <meta name="author" content="">
@@ -60,20 +60,20 @@
 
     </style>
 </noscript><meta property="og:url" content="/en/">
-  <meta property="og:site_name" content="Timothée Dorand - From Paris to Berlin">
-  <meta property="og:title" content="Timothée Dorand - From Paris to Berlin">
+  <meta property="og:site_name" content="Timothée Dorand">
+  <meta property="og:title" content="Timothée Dorand">
   <meta property="og:description" content="Vous trouverez sur ce site l&#39;avancement des side projects et reflexions de Timothée DORAND.">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="Timothée Dorand - From Paris to Berlin">
+<meta name="twitter:title" content="Timothée Dorand">
 <meta name="twitter:description" content="Vous trouverez sur ce site l&#39;avancement des side projects et reflexions de Timothée DORAND.">
 
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "Timothée Dorand - From Paris to Berlin",
+  "name": "Timothée Dorand",
   "url": "/en/",
   "description": "Vous trouverez sur ce site l'avancement des side projects et reflexions de Timothée DORAND.",
   "logo": "/favicon.ico",
@@ -99,7 +99,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="/en/" accesskey="h" title="Timothée Dorand - From Paris to Berlin (Alt + H)">Timothée Dorand - From Paris to Berlin</a>
+            <a href="/en/" accesskey="h" title="Timothée Dorand (Alt + H)">Timothée Dorand</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
